# geode-clicksound

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  aboutWithLevel.md  changelog.md  index_list.json  indexer-config.json  mod.json  support.md
.github/: CopySoundsForRename.py  CopySoundsForRenamePT2.py  CopySoundsForRenamePT3temp.py  getInfo.py  sendtotesters.py  sendupdate.py
.github/AddToClickList/: main.py
.github/FileNamer/: main.py  requires.sh
.github/workflow-scripts/: get-info.py  send-to-testers.py
.github/workflows/: build.yml  build2.yml  draft.yml  multi-platform.yml  on-github-update.yml  renameAllSounds.yml  testers.yml  update-clicklist.yml  update-sound-module.yml
old files/rip missingnodeids.cpp/: MissingNodeIDs.cpp
old/settings/: ClickTypeNodes.hpp
resources/: contributors.json  spinner frames generator thing.html  test.html
resources/material-icons/: _NOTES FOR MATERIAL ICONS
src/: ClickList.cpp  ClickList.json  DeveloperBadges.cpp  IDCheck.hpp  Keybinds.cpp  MissingNodeIDs.cpp  ModsRead.cpp  PauseLayer.hpp  PauseSettings.cpp  ProfilePage.hpp  ReleaseList.cpp  StaticClasses.hpp  StoreLayer.cpp  StoreLayer.hpp  cspiUtils.hpp  ee.hpp  main.cpp  noNodeIds.cpp
src.old/layers/: PauseSettings.cpp
src.old/utils/: Clicks.hpp
src/ButtonSprites/: Sprite.hpp
src/SettingsV3/: PlaySound.hpp  PlaySoundV2.hpp  SelctionEnumBackup.hpp  SelectionEnum.hpp  popup.hpp
src/SettingsV3/popup_nodes/: CCIndexPackNode.hpp  CSIndexPackNode.hpp
src/click/: Author.cpp  Author.hpp  Local.cpp  Local.hpp  Manager.cpp  Manager.hpp  Pack.cpp  Pack.hpp  SettingsButton.cpp  SettingsButton.hpp  Sound.cpp  Sound.hpp  Toolbox.cpp  Toolbox.hpp
src/click/settings/: ClickTypeNodes.hpp  Sections.hpp  SettingsSetup.cpp
src/hooks/: MenuLayer.cpp
src/jsonReader/: Getsettingsinfo.hpp  Json.hpp  index.hpp
src/layers/: Clicks.cpp  DeveloperBadges.cpp  ManageClicksLayer.cpp  ManageClicksLayer.hpp  MissingNodeIDs.cpp  PauseSettings.cpp  Settings.cpp
src/modify/: EditorPauseLayer.cpp  EndLevelLayer.cpp  PauseLayer.cpp  PlayerObject.cpp  ProfilePage.cpp
src/old/: main.cpp
src/old/settings/: ClickTypes.hpp  Sections.hpp
src/settings/: ClickTypeNodes.hpp  ClickTypes.hpp  SettingsSetup.cpp  SoundTest.hpp
src/ui/: Spinner.cpp  Spinner.hpp
src/utils/: AnotherSettings.hpp  Clicks.hpp  Settings.hpp  ee.hpp  getJSON.cpp  getJSON.hpp  utils.hpp
